fix overlapping text and image in carousel

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -250,6 +250,7 @@
     left: 0;
     right: 0;
     margin: 0 auto;
+    z-index: 2;
 
     h2 {
 
